@@ -61,24 +61,28 @@
   <inceptionYear>2021</inceptionYear>
 
   <properties>
-    <clean-plugin.version>3.3.2</clean-plugin.version>
+    <clean-plugin.version>3.5.0</clean-plugin.version>
     <resources-plugin.version>3.3.1</resources-plugin.version>
     <source-plugin.version>3.3.1</source-plugin.version>
     <compiler-plugin.version>3.14.0</compiler-plugin.version>
-    <surefire-plugin.version>3.5.2</surefire-plugin.version>
+    <surefire-plugin.version>3.5.3</surefire-plugin.version>
     <failsafe-plugin.version>${surefire-plugin.version}</failsafe-plugin.version>
-    <jar-plugin.version>3.4.1</jar-plugin.version>
-    <gpg-plugin.version>3.2.4</gpg-plugin.version>
-    <install-plugin.version>3.1.2</install-plugin.version>
-    <deploy-plugin.version>3.1.2</deploy-plugin.version>
+    <jar-plugin.version>3.4.2</jar-plugin.version>
+    <gpg-plugin.version>3.2.7</gpg-plugin.version>
+    <install-plugin.version>3.1.4</install-plugin.version>
+    <deploy-plugin.version>3.1.4</deploy-plugin.version>
     <release-plugin.version>3.1.1</release-plugin.version>
-    <flatten-plugin.version>1.6.0</flatten-plugin.version>
-    <site-plugin.version>3.12.1</site-plugin.version>
-    <project-info-reports-plugin.version>3.5.0</project-info-reports-plugin.version>
-    <javadoc-plugin.version>3.6.3</javadoc-plugin.version>
+    <flatten-plugin.version>1.7.0</flatten-plugin.version>
+    <site-plugin.version>3.21.0</site-plugin.version>
+    <project-info-reports-plugin.version>3.9.0</project-info-reports-plugin.version>
+    <javadoc-plugin.version>3.11.2</javadoc-plugin.version>
     <aspectj-plugin.version>1.15.0</aspectj-plugin.version>
     <lombok-plugin.version>1.18.20.0</lombok-plugin.version>
     <antrun-plugin.version>3.1.0</antrun-plugin.version>
+    <build-helper-plugin.version>3.6.1</build-helper-plugin.version>
+    <war-plugin.version>3.4.0</war-plugin.version>
+    <frontend-plugin.version>1.15.1</frontend-plugin.version>
+    <exec-plugin.version>3.5.1</exec-plugin.version>
 
     <maven.compiler.parameters>true</maven.compiler.parameters>
     <maven.compiler.source>21</maven.compiler.source>
@@ -95,16 +99,15 @@
 
     <slf4j.version>2.0.17</slf4j.version>
     <logback.version>1.5.18</logback.version>
-    <aspectj.version>1.9.23</aspectj.version>
+    <aspectj.version>1.9.24</aspectj.version>
     <lombok.version>1.18.38</lombok.version>
-    <jackson.version>2.18.2</jackson.version>
-    <apache.shiro.version>2.0.2</apache.shiro.version>
+    <jackson.version>2.18.3</jackson.version>
+    <apache.shiro.version>2.0.4</apache.shiro.version>
     <mapstruct.version>1.6.3</mapstruct.version>
-    <testcontainers.version>1.20.6</testcontainers.version>
 
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-    <quarkus.platform.version>3.22.3</quarkus.platform.version>
+    <quarkus.platform.version>3.23.3</quarkus.platform.version>
 
     <junit.version>5.12.1</junit.version>
     <jsonassert.version>1.5.3</jsonassert.version>
@@ -114,7 +117,7 @@
     <jakarta.persistence-api.version>3.1.0</jakarta.persistence-api.version>
     <jakarta.transaction-api.version>2.0.1</jakarta.transaction-api.version>
     <microprofile-openapi-api.version>4.0.2</microprofile-openapi-api.version>
-    <microprofile-config-api.version>3.0.3</microprofile-config-api.version>
+    <microprofile-config-api.version>3.1</microprofile-config-api.version>
 
     <!-- elasticsearch low level rest client -->
     <elasticsearch-rest-client.version>8.17.4</elasticsearch-rest-client.version>
@@ -405,7 +408,9 @@
         <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
+            <!--suppress MavenModelInspection -->
             <artifactId>maven-gpg-plugin</artifactId>
+            <!--suppress MavenModelInspection -->
             <version>${gpg-plugin.version}</version>
             <executions>
               <execution>
@@ -452,6 +457,26 @@
           <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </repository>
       </repositories>
+    </profile>
+    <profile>
+      <id>jdk-24-and-above</id>
+      <activation>
+        <jdk>[24,)</jdk>
+      </activation>
+      <properties>
+        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>${argLine}</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 
